# dbus-cxx

./: .gitignore  CMakeLists.txt  dbus-cxx-1.0.pc.cmake.in  dbus-cxx-glibmm-1.0.pc.cmake.in
cmake-modules/: CTestCustom.cmake.in  NSISExtra.nsh
compat/: fcntl.h  pipe2.c  poll.c  poll.h  posix_win.c  stdlib.h  time.h  unistd.h  win32netcompat.h
compat/sys/: socket.h  time.h  types.h
dbus-cxx/: callmessage.cpp  callmessage.h  connection.cpp  connection.h.m4  dbus-cxx-private.h  dbus_cxx_macros.h  dbus_signal.h.m4  dispatcher.cpp  dispatcher.h  errormessage.cpp  headerlog.h  interface.cpp  interface.h.m4  interfaceproxy.cpp  interfaceproxy.h.m4  locks.h  message.cpp  message.h  messageappenditerator.cpp  messageappenditerator.h  messageiterator.cpp  messageiterator.h  method.h.m4  method_impl.h.m4  methodbase.cpp  methodbase.h  methodproxybase.cpp  methodproxybase.h.m4  object.cpp  object.h.m4  objectpathhandler.cpp  objectproxy.cpp  objectproxy.h.m4  path.cpp  signal_base.cpp  signal_base.h  signal_proxy.h.m4  signal_proxy_base.cpp  signal_proxy_base.h  signalmessage.cpp  (+9 more)
dbus-cxx-glibmm/: dispatcher.cpp
examples/: examples-common.cmake
examples/basics/filedescriptors/: CMakeLists.txt  filedescriptor_client.cpp  filedescriptor_server.cpp
examples/basics/methods/: CMakeLists.txt  callee.cpp  callee_2.cpp  callee_c.cpp  callee_dispatched.cpp  callee_object.cpp  callee_object_inherited.cpp  callee_raw.cpp  caller.cpp  caller_c.cpp  caller_popt.h  caller_raw.cpp
examples/basics/signals/: CMakeLists.txt  signal_emitter.cpp  signal_emitter_2.cpp  signal_emitter_3.cpp  signal_emitter_array.cpp  signal_emitter_c.cpp  signal_emitter_object.cpp  signal_emitter_raw.cpp  signal_receiver.cpp  signal_receiver_2.cpp  signal_receiver_array.cpp  signal_receiver_c.cpp  signal_receiver_object.cpp  signal_receiver_raw.cpp
examples/basics/types/: CMakeLists.txt  time_server.cpp  timeval_dbus.h
examples/glibmm/: caller_popt.h  glibmm_callee_dispatched.cpp
examples/quick-start/: CMakeLists.txt  quickstart_server_0.cpp
examples/xml2cpp/calculator/: calculator.cpp  calculator_server.cpp  calculator_watcher.cpp  client_popt.h
examples/xml2cpp/calculator-interface/: calculator_server.cpp  calculator_watcher.cpp  client_popt.h
examples/xml2cpp/computer-has-a/: computer_server.cpp  computer_watcher.cpp
examples/xml2cpp/computer-is-a/: client_popt.h  computer_server.cpp  computer_watcher.cpp
tools/: CMakeLists.txt  arg.cpp  arg.h  generate_adapter.cpp  generate_proxy.cpp  parsed_object.cpp  parsed_object.h  string.h  xml2cpp.cpp  xml_parser.cpp
tools/libcppgenerate/cppgenerate/: printer.cpp
unit-tests/: CMakeLists.txt  datatests.cpp  objecttests.cpp  run-client-server-test.bat  run-client-server-test.sh  run-delayed.bat  signaltests.cpp  test-session.conf  timeouttests.cpp
